# Ingest-ragflow

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  run_coverage_pytest.sh  run_tests.sh  setup.py
.github/workflows/: ci-tests.yml
scripts/: ragflow_test_api.py
scripts/example_dspace_dowload_collection/: README.md  download_collection.py
scripts/pipeline_dspace_ragflow/: repo_collections_ingest.py  repo_ingest.py  repo_items_ingest.py
scripts/ragflow_test_api/: ragflow_test_api.py
scripts/stats_repo/: collection_stats.py  collection_stats_20250218.csv  item_stats.py  items_stats_20250904.csv  stats.py
scripts/upload_ragflow/: README.md  upload_ragflow.py
src/ingest_ragflow/dspace_api/: README.md  autentification.py  authentification.py  collections.py  files.py  items.py
src/ingest_ragflow/rag/: README.md  dataset.py  files.py  parsing.py  reporting.py
src/ingest_raggflow/dspace_api/: README.md  autentification.py  collections.py  files.py
src/ingest_raggflow/raggg/: README.md  files.py  parsing.py
src/prot_raggflow/dspace_api/: autentification.py  collections.py  files.py
src/prot_raggflow/raggg/: files.py  parsing.py
tests/dspace_api/: test_autentification.py  test_collections.py  test_files.py  test_items.py
tests/rag/: test_dataset.py  test_files.py  test_parsing.py  test_reporting.py
