[project]
name = "ingest-ragflow"
version = "0.1.0"
description = "This repository contains code for integrating and using various components, including the DSpace API and a knowledge base in Ragflow."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "juanQNav", email = "juan.qn363@gmail.com"},
  {name = "MikelBarajas38", email = ""},
  {name = "paopaopro", email = ""},
  {name = "SantiagoLunaMir", email = ""},
  {name = "Daphish's", email = ""}
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "ragflow-sdk==0.15.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"ingest-ragflow"
]

[tool.uv.sources]
ingest-ragflow = { workspace = true}
