[project]
name = "ingest-ragflow"
version = "0.1.0"
description = "This repository contains code for integrating and using various components, including the DSpace API and a knowledge base in Ragflow."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "juanQNav", email = "juan.qn363@gmail.com"},
  {name = "MikelBarajas38", email = "mikelbarajas388@gmail.com"},
  {name = "paopaopro", email = "paopaopro1808@gmail.com"},
  {name = "SantiagoLunaMir", email = "santiagomireles107@gmail.com"},
  {name = "Daphish's", email = "ivan.davila.2003@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "ragflow-sdk",
    "requests[socks]>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"ingest-ragflow",
	"ruff>=0.13.2",
	"flake8>=7.1.1,<7.2",
	"coverage>=7.10,<7.11",
	"pytest>=8.4.1",
	"setuptools>=80.9.0",
]

[tool.uv.sources]
ingest-ragflow = { workspace = true}
